--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "build": "rimraf dist && swc ./src -d dist",
     "migrate:dev": "prisma migrate dev",
-    "migrate:prod": "prisma migrate deploy",
+    "migrate": "prisma migrate deploy",
     "prisma:studio": "npx prisma studio",
     "build:prisma": "prisma generate && npm run rebuild:be",
     "start:docker": "npm run build && node --inspect=0.0.0.0 dist/index.js",
