--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "rimraf dist && swc ./src -d dist",
+    "build": "swc ./src -d dist",
     "migrate:dev": "prisma migrate dev",
     "migrate": "prisma migrate deploy",
     "prisma:studio": "npx prisma studio",
@@ -37,7 +37,7 @@
     "@graphql-codegen/typescript": "2.8.8",
     "@graphql-codegen/typescript-resolvers": "^2.7.13",
     "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.29",
+    "@swc/core": "^1.3.57",
     "@tsconfig/node16": "^1.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
