--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - postgres
     environment:
       DATABASE_URL: ${DATABASE_URL}
+      JWT_SECRET: ${JWT_SECRET}
       PORT: 8000
 
 volumes:
