--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.5",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^2.0.1",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
