--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "swc ./src -d dist",
-    "migrate:dev": "prisma migrate dev",
+    "migrate:dev": "dotenv -e .env.local npx prisma migrate dev",
     "migrate": "prisma migrate deploy",
     "prisma:studio": "npx prisma studio",
     "build:prisma": "prisma generate && npm run rebuild:be",
@@ -47,6 +47,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "dotenv": "^16.1.4",
     "eslint": "^8.32.0",
     "prisma": "^4.9.0",
     "rimraf": "^4.1.2"
